2002-01-17 Alexander Rawass <alexannika@users.sourceforge.net>
	tag: after_data_removal_stage1
	
	* removed all data which might upset lawyers from CVS
	

	tag: before_data_removal_stage1
2002-01-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* vampire/drone bug fixed???
	  - uncommented that sorting in mesh.cpp
	

2002-01-05 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* imported data/units/drone for testing
	* added data/mission/test/drone*.mission
	* imported vegastrike/doc/texturizer
	
	
2002-01-01 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* wrote some dumb ai's in TuxFleet-style
	  ai_rolling,ai_stationary,ai_circling
	* wrote ai that can flyto a waypoint ai_flyto*
	

2001-12-30 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added more Orders to the _order callback
	* made AImissionScript a subclass of FlyByWire
	* added FlyByWire-Callbacks to the _order callbacks
	* added more callbacks to _unit
	

2001-12-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* 'fixed' aggressive.cpp
	   it now uses it's own suborders, instead of the units orders
	
	
2001-12-28 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* the first ai works now with new scripting
	* improved vdu/messages

	
2001-12-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added script_call_order.cpp

2001-12-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added sort-of classes/instances of modules
	* AI scripting:
	  - first test ai is running (doing nothing)
	  - added modules/ai_test.c , mission/testd/testd_aitest1.mission

	
2001-12-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - fixed memory leaks for varInsts
	* AI scripting:
	  - added src/cmd/ai/missionscript.{cpp,h}
	  - modified src/cmd/ai/Makefile.am
	* new AI scripting is used if ainame begins with _ (not working yet)
	

2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	