@@ -1,0 +1,66 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Alexander's Page</title>
+</head>
+<body>
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Alexander's Vegastrike Page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<p>I am a Co-Developer of Vegastrike, and I'll maintain this 'alternative
+Homepage' because I don't like Vegastrike's Homepage.
+<ul>
+<li>
+<a href="main.html">News/Info</a></li>
+
+<li>
+<a href="pics.html">Screenshots</a></li>
+
+<li>
+<a href="download.html">Download</a></li>
+
+<li>
+<a href="installing.html">Installing</a></li>
+
+<li>
+<a href="playing.html">Playing</a></li>
+
+<li>
+<a href="http://sourceforge.net/projects/vegastrike/">Project Page on Sourceforge</a></li>
+
+<li>
+Mailing-Lists</li>
+
+<li>
+<a href="credits.html">Credits</a></li>
+
+<li>
+<a href="email.html">E-Mail</a></li>
+
+<li>
+<a href="links.html">Links</a></li>
+
+<li>
+<a href="help.html">Texturizer howto</a></li>
+
+<li>
+<a href="http://hkn.eecs.berkeley.edu/~ashieh/184/">CS 184 Project Page
+on Berkeley</a></li>
+
+<li>
+</li>
+</ul>
+
+<hr WIDTH="100%">
+<p>maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
