@@ -1,0 +1,157 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+
+<HTML>
+<HEAD>
+	<TITLE>Vega Strike</TITLE>
+</HEAD>
+
+<BODY BACKGROUND="bg1.jpg" bgcolor="#000000" text="#C0C0C0" link="#000000" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
+<table width="700"><tr><td align="right">
+<img src="logo.gif" width=415 height=155 border=0 alt="">
+</td></tr></table>
+<br><br><br><br>
+
+<Table width="80%"><tr><td>
+<BLOCKQUOTE>
+<CENTER><BR>
+<A HREF = "main.html">Info</A> || <A HREF = "pics.html">Screen Shots</A> || <A HREF = "download.html">Download</A> || <A HREF = "help.html">Add New Ship</A> || <A HREF = "credits.html">Credits</A> || <A HREF = "email.html">E-mail</A>
+<BR></CENTER>
+<table width="100%"><tr><td bgcolor="#393939"><font face="Arial" size="2" color="#FFFFFF"><B>&nbsp;&nbsp;
+Credits <font color="#006834">
+</B></font></td></tr></table>
+
+
+<TABLE CELLSPACING=2 CELLPADDING=2 BORDER=0>
+<TR>
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Person</FONT></FONT></TD>
+
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Position</FONT></FONT></TD>
+
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Previous Job</FONT></FONT></TD>
+
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><FONT SIZE=2 FACE=Arial><B>Current Job</FONT></FONT></TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto: hellcatv@hotmail.com">Daniel Horn</A></FONT></TD>
+
+<TD>Lead Programmer</TD>
+
+<TD>Made the Program</TD>
+
+<TD>All General Daily Improvements</TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto:alexannika@users.sourceforge.net">Alexander Rawass</A></FONT></TD>
+
+<TD>Programmer</TD>
+<TD> Finished joystick and config files.</TD>
+<TD>Working on AI Scripts and config files. 
+
+<TD></TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><FONT COLOR="#000000"><A HREF="mailto:ashieh@users.sourceforge.net">ashieh</A></FONT></TD>
+
+<TD>Lead Programmer</TD>
+
+<TD>Worked on the Physics engine and primitive AI.</TD>
+
+<TD>Worked on the 3d wrapper and major speed optimizations</TD>
+</TR>
+
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Patrick Horn</TD>
+
+<TD>Developer</TD>
+
+<TD>Worked on AI Development Stack Calculation<br>Worked on unit,terrain, and other config files</TD>
+
+<TD></TD>
+</TR>
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">H.E. Day</TD>
+
+<TD>Artist</TD>
+
+<TD>Made Explosions, Made Beautiful cockpit</TD>
+
+<TD></TD>
+</TR>
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Jason Winzenried</TD>
+
+<TD>Artist</TD>
+
+<TD> Made such dazzling, beautiful cockpit and various starships</TD>
+
+<TD></TD>
+</TR>
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Tobias Wollgarn & Major A Payne & Somall</TD>
+
+<TD>Artist</TD>
+
+<TD>Made all the sounds from scratch!</TD>
+
+<TD></TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Eagle-1</TD>
+
+<TD>Testing/Advice/Support</TD>
+
+<TD>Helped test MP</TD>
+
+<TD></TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Daniel Aleksandrow</TD>
+
+<TD>Artist</TD>
+
+<TD>Made LODs for various starships</TD>
+
+<TD></TD>
+</TR>
+
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">James Carthew</TD>
+
+<TD>Artist</TD>
+
+<TD>Made Missile models and Sol system</TD>
+
+<TD>Missions</TD>
+</TR>
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">LOAF</TD>
+
+<TD>Stats</TD>
+
+<TD>Helped to balance gun weapon stats</TD>
+
+<TD></TD>
+</TR>
+<TR>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">James T Richardson</TD>
+
+<TD>Windows Development</TD>
+
+<TD></TD>
+</TR>
+
+</TABLE>
+
+</td></tr></table>
+
+
+</BODY>
+</HTML>
+
+
