@@ -1,0 +1,31 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+
+<HTML>
+<HEAD>
+        <TITLE>Vega Strike</TITLE>
+</HEAD>
+
+<BODY BACKGROUND="bg1.jpg" bgcolor="#000000" text="#C0C0C0" link="#00BB5E" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
+<table width="700"><tr><td align="right">
+<img src="logo.gif" width=415 height=155 border=0 alt="">
+</td></tr></table>
+<br><br><br><br>
+<BLOCKQUOTE>
+<Table width="80%"><tr><td>
+<CENTER><BR>
+<A HREF = "main.html">Info</A> || <A HREF = "pics.html">Screen Shots</A> || <A HREF = "download.html">Download</A> || <A HREF = "help.html">Add New Ship</A> || <A HREF = "credits.html">Credits</A> || <A HREF = "email.html">E-mail</A>
+<BR></CENTER>
+<table width="100%"><tr><td bgcolor="#393939"><font face="Arial" size="2" color="#FFFFFF"><B>&nbsp;&nbsp;
+E-Mail <font color="#006834">
+</B></font></td></tr></table>
+<br><br>
+<A HREF="mailto:HellcatV@hotmail.com">Tiger_Shark / HellcatV</a> - Project Leader
+<br><br>
+<A HREF="mailto:wizzy@wizworld.ml.org">Wizzy</a> - Webmaster
+<br><br>
+<A HREF="mailto:vegastrike-users@lists.sourceforge.net"> Users Mailing List</a>
+ (it's best to ask questions there)
+ <br><br>
+</td></tr></table>
+</BODY>
+</HTML>
