@@ -1,0 +1,50 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Installing</title>
+</head>
+<body>
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Installing Vegastrike&nbsp;&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<br>&nbsp;
+<h2>
+Installing Vegastrike on Linux:</h2>
+1. go to the download page and download from there the latest unixdata
+tar file and the latest linux binary
+<p>2. extract the binary to a directory of your choice
+<br>&nbsp;&nbsp;&nbsp; example: tar zxf ../vegastrike-0.1.3-x86-linux.tar.gz
+<p>3. cd to the created subdirectory
+<br>&nbsp;&nbsp;&nbsp; cd vegastrike-0.1.3
+<p>4. extract the content from the unixdata tarball into this directory:
+<br>&nbsp;&nbsp;&nbsp; tar zxf ../vegastrike_unixdata-0.1.3.tgz
+<p>5. then cd to the data directory
+<p>6. to start vegastrike, type
+<br>&nbsp;&nbsp;&nbsp; ./vegastrike &lt;mission-file>
+<p>&nbsp;&nbsp;&nbsp; Examples:&nbsp; ./vegastrike&nbsp;&nbsp;&nbsp;&nbsp;
+(starts the default mission)
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+./vegastrike mission/ships_confed1.mission
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+./vegastrike mission/test/test4.mission
+<br>&nbsp;
+<br>&nbsp;
+<h2>
+Installing Vegastrike on Win32:</h2>
+1. download the windows binary zip file
+<p>2. unzip the file in a directory of your choice
+<p>&lt;more to come soon>
+<p>
+<hr WIDTH="100%">
+<p>maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
