@@ -1,0 +1,138 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Links</title>
+</head>
+<body>
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Vegastrike Links&nbsp;&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<br>&nbsp;
+<h2>
+Links to other 3D games/apps worth mentioning</h2>
+please contact me if you know of other 3D games projects you'd like to
+see here:
+<br>&nbsp;&nbsp;&nbsp;&nbsp; Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<p>3D Space Fight Simulators:
+<ul>
+<li>
+<a href="http://www.dtek.chalmers.se/groups/reaper/">Reaper3D</a>&nbsp;
+- 3D Space Fight Sim with terrain and great graphics</li>
+
+<li>
+<a href="http://spacetrek.sourceforge.net">Spacetrek</a> - a 3D Netrek
+clone</li>
+
+<li>
+<a href="http://members.ozemail.com.au/~ndmcevoy/">Reality Check</a> -
+3D Space Sim</li>
+
+<li>
+<a href="http://www.cjpinder.clara.co.uk/main.htm">Elite - The New Kind</a>&nbsp;
+- an Elite re-make (Win32 only :-( )</li>
+
+<li>
+<a href="http://genesis.ne.mediaone.net/orbit">Orbit</a> - a free Space
+Flight Simulator</li>
+
+<li>
+<a href="http://www.spacething.org">SpaceThing</a> - a Space Fight Simulator
+just like mine</li>
+
+<li>
+<a href="http://compsoc.dur.ac.uk/mote">Mote</a> - a Space Fight Simulator
+with a Story behind it</li>
+
+<li>
+<a href="http://foundation.sourceforge.net">Foundation</a> - a Space Fight
+Simulator with a Trading GUI</li>
+
+<li>
+<a href="http://tuxfleet.sourceforge.net">TuxFleet</a> - Space Fight Sim
+based on plib, now obsolete thanks to Vegastrike :-)</li>
+</ul>
+
+<p><br>3D Plane Simulators:
+<blockquote>
+<li>
+<a href="http://rixed.free.fr/">Fachoda Complex </a>- a funny plane sim
+:-))&nbsp; but no source :-(</li>
+
+<li>
+ACM</li>
+
+<li>
+Sabre Fighter</li>
+
+<li>
+<a href="http://www.flightgear.org">FlightGear</a> Flightsimulator</li>
+</blockquote>
+
+<p><br>other Open Source multi-platform 3D-games:
+<ul>
+<li>
+<a href="http://tuxafqh.sourceforge.net">Tux and the quest for herring</a>
+- a wonderful cute little game</li>
+
+<li>
+<a href="http://tuxkart.sourceforge.net">Tuxkart</a> - the upcoming rival
+for 'Need for Speed'</li>
+
+<br>&nbsp;</ul>
+Gaming Engines:
+<ul>
+<li>
+<a href="http://gauge3d.sourceforge.net">Gauge3D</a>&nbsp;&nbsp;&nbsp;
+Gaming Engine with 3D Renderer</li>
+
+<li>
+<a href="http://cubesoft.sourceforge.net">OMIGG</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Gaming Engine with Game based on CrystalSpace</li>
+</ul>
+
+<p><br>3D-Renderers/Scenegraphs
+<ul>
+<li>
+<a href="http://plib.sourceforge.net">plib</a> - portable games library
+(used heavily by TuxFleet)</li>
+
+<li>
+<a href="http://sgl.sourceforge.net">SGL</a> - OpenGL Scenegraph (optional
+renderer for TuxFleet)</li>
+
+<li>
+<a href="http://lib3dtk.sourceforge.net">lib3dtk</a> - 3D Renderer based
+on GGI (optional renderer for TuxFleet)</li>
+
+<li>
+<a href="http://sourceforge.net/projects/nebuladvice/">Nebula Device</a>&nbsp;&nbsp;
+- commercial, but Open Source</li>
+
+<li>
+<a href="http://www.panardvision.com/v3/">Panard Vision</a>&nbsp;&nbsp;
+-&nbsp; commercial, but Open Source</li>
+
+<li>
+<a href="http://sourceforge.net/projects/openrm">OpenRM</a></li>
+
+<li>
+<a href="http://sourceforge.net/projects/opensg">OpenSG</a></li>
+
+<li>
+<a href="http://crystal.sourceforge.net/">CrystalSpace</a></li>
+</ul>
+
+<hr WIDTH="100%">
+<p>maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
