@@ -1,0 +1,124 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Playing Howto</title>
+</head>
+<body>
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Playing Vegastrike&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<br>&nbsp;
+<h2>
+Starting Vegastrike:</h2>
+to start Vegastrike, you have to cd to the data directory and then:
+<p>./vegastrike &lt;mission-name>
+<p>Examples:&nbsp;&nbsp;&nbsp; ./vegastrike&nbsp;&nbsp;&nbsp;&nbsp; (starts
+the default mission)
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+./vegastrike mission/ships_confed1.mission
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+./vegastrike mission/test/test4.mission
+<br>&nbsp;
+<h2>
+Configuring Vegastrike:</h2>
+Vegastrike can be configured by editing the file 'vegastrike.config' file
+in the data directory.
+<p>You can configure Key- and Joystickbindings there, and adjust Vegastrike's
+config variables to match your computers speed.
+<br>&nbsp;
+<h2>
+Playing Vegastrike:</h2>
+When the game starts, you should be sitting in a cockpit of a space fighter.
+<p>Press F1 to switch from cockpit view to HUD view and back.
+<p>Use the cursor keys or Joystick to steer your ship.
+<p>Use Space Bar or the first Joy-Button to fire your lasers.
+<p>Press 't' to target a different ship.
+<p>Hold down TAB to accellerate your ship with afterburners.
+<p>Press F5/F6 to see your ship from behind.
+<p>Press ESC to quit.
+<p>For more keys, have a look at the vegastrike.config file
+<p>On your radar, you can see enemy and friendly ships.
+<br>Enemies are red dots, friends are green.
+<p>&lt;more to come soon>
+<br>&nbsp;
+<br>&nbsp;
+<h2>
+Playable Missions :</h2>
+
+<ul>
+<li>
+The missions in the data/mission folder should be playable.</li>
+
+<li>
+mission/test contains test missions and&nbsp;<br>
+mission/testd contains test missions for the new director<br>
+those might work or not</li>
+</ul>
+Overview of the missions in data/mission (from CVS, this is not valid for
+the 0.1.3 release)
+<ul>
+<li>
+earth_patrol1<br>
+lets you fly around the earth and experience the terrain<br>
+just fly straight to and into earth, try to crash your ship into the earth
+globe - and then you'll see the terrain</li>
+
+<li>
+earth_defender1<br>
+defend earth from the bad aera</li>
+
+<li>
+earth_defend_cruiser1,earth_defend_cruiser2<br>
+defend a cruiser in earth range from the aera attack</li>
+
+<li>
+earth_patrol_rnd_attack1<br>
+fly around the earth and get attacked by aera enemies, which appear around
+your area<br>
+can you survive without help</li>
+
+<li>
+earth_patrol_rnd_attack2<br>
+like above, but confed help will jump in from time to time to save your
+ass</li>
+
+<li>
+total_war1<br>
+war in space - wave after wave of confed/aera gets launched<br>
+luckily, you steer a neutral ship :-)</li>
+
+<li>
+total_war2<br>
+as above - but you're confed now (and get attacked)</li>
+
+<li>
+launch_and_launch1<br>
+sort-of a stresstest - really lots of ships get launched very fast</li>
+
+<li>
+ships_aera2,ships_aera3<br>
+see the aera ships rotating in space (to have a look at them)</li>
+
+<li>
+ships_confed1,ships_confed2<br>
+as above, just with the confed ships</li>
+
+<li>
+station_defend1,station_defend2<br>
+defend a space station from the aera</li>
+</ul>
+
+<p><br>
+<hr WIDTH="100%">
+<p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
